add navigation bar & add sample plugin

--- a/src/Modulus.App/Views/MainView.axaml
+++ b/src/Modulus.App/Views/MainView.axaml
@@ -7,10 +7,7 @@
              x:Class="Modulus.App.Views.MainView"
              x:DataType="vm:MainViewModel">
   <Design.DataContext>
-    <!-- This only sets the DataContext for the previewer in an IDE,
-         to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
     <vm:MainViewModel />
   </Design.DataContext>
-
-  <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+  <!-- This view is now a placeholder, actual content is loaded via MainWindow's CurrentView binding. -->
 </UserControl>
