--- a/src/Modulus.App/Controls/NavigationBar.axaml
+++ b/src/Modulus.App/Controls/NavigationBar.axaml
@@ -13,14 +13,28 @@
 	<UserControl.Resources>
 		<cv:NavHighlightConverter x:Key="NavHighlightConverter" />
 	</UserControl.Resources>
-	<DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Center" Width="80">
+	<Grid VerticalAlignment="Stretch" HorizontalAlignment="Center" Width="80">
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto" />
+			<!-- Header -->
+			<RowDefinition Height="*" />
+			<!-- Body -->
+			<RowDefinition Height="Auto" />
+			<!-- Footer -->
+		</Grid.RowDefinitions>
+
 		<!-- Header -->
-		<StackPanel DockPanel.Dock="Top" Spacing="8" Margin="0,16,0,0" HorizontalAlignment="Center">
+		<StackPanel Grid.Row="0" Margin="0,16,0,0" HorizontalAlignment="Center">
 			<Image Source="avares://Modulus.App/Assets/avalonia-logo.ico" Width="32" Height="32" Stretch="Uniform"/>
 			<TextBlock Text="Modulus" FontSize="16" FontWeight="Bold" Foreground="#3B82F6" HorizontalAlignment="Center"/>
 			<TextBlock Text="v1.0.0" FontSize="11" Foreground="#888" HorizontalAlignment="Center"/>
 			<!-- Header Items -->
 			<ItemsControl ItemsSource="{Binding HeaderItems}">
+				<ItemsControl.ItemsPanel>
+					<ItemsPanelTemplate>
+						<StackPanel Spacing="8"/>
+					</ItemsPanelTemplate>
+				</ItemsControl.ItemsPanel>
 				<ItemsControl.ItemTemplate>
 					<DataTemplate x:DataType="vm:NavigationMenuItemViewModel">
 						<Button Background="{Binding IsActive, Converter={StaticResource NavHighlightConverter}}"
@@ -44,53 +58,59 @@
 		</StackPanel>
 
 		<!-- Body: Main Menu Items -->
-		<StackPanel DockPanel.Dock="Top" Spacing="8" Margin="0,32,0,0" HorizontalAlignment="Center">
-			<ItemsControl ItemsSource="{Binding BodyItems}">
-				<ItemsControl.ItemTemplate>
-					<DataTemplate x:DataType="vm:NavigationMenuItemViewModel">
-						<Button Background="{Binding IsActive, Converter={StaticResource NavHighlightConverter}}"
-								Foreground="White"
-								ToolTip.Tip="{Binding Tooltip}"
-								Width="{Binding Width}"
-								Height="{Binding Height}"
-								CornerRadius="{Binding CornerRadius}"
-								Command="{Binding Command}"
-								Margin="0,0,0,4">
-							<StackPanel>
-								<TextBlock Text="{Binding Icon}"
-										   FontFamily="Segoe MDL2 Assets"
-										   FontSize="{Binding FontSize}"
-										   HorizontalAlignment="Center"/>
-							</StackPanel>
-						</Button>
-					</DataTemplate>
-				</ItemsControl.ItemTemplate>
-			</ItemsControl>
-		</StackPanel>
+		<ItemsControl Grid.Row="1" ItemsSource="{Binding BodyItems}" Margin="0,32,0,0" HorizontalAlignment="Center">
+			<ItemsControl.ItemsPanel>
+				<ItemsPanelTemplate>
+					<StackPanel Spacing="8"/>
+				</ItemsPanelTemplate>
+			</ItemsControl.ItemsPanel>
+			<ItemsControl.ItemTemplate>
+				<DataTemplate x:DataType="vm:NavigationMenuItemViewModel">
+					<Button Background="{Binding IsActive, Converter={StaticResource NavHighlightConverter}}"
+							Foreground="White"
+							ToolTip.Tip="{Binding Tooltip}"
+							Width="{Binding Width}"
+							Height="{Binding Height}"
+							CornerRadius="{Binding CornerRadius}"
+							Command="{Binding Command}"
+							Margin="0,0,0,4">
+						<StackPanel>
+							<TextBlock Text="{Binding Icon}"
+									   FontFamily="Segoe MDL2 Assets"
+									   FontSize="{Binding FontSize}"
+									   HorizontalAlignment="Center"/>
+						</StackPanel>
+					</Button>
+				</DataTemplate>
+			</ItemsControl.ItemTemplate>
+		</ItemsControl>
 
 		<!-- Footer: Settings/User/Feedback etc. -->
-		<StackPanel DockPanel.Dock="Bottom" Spacing="8" Margin="0,0,0,24" HorizontalAlignment="Center">
-			<ItemsControl ItemsSource="{Binding FooterItems}">
-				<ItemsControl.ItemTemplate>
-					<DataTemplate x:DataType="vm:NavigationMenuItemViewModel">
-						<Button Background="{Binding IsActive, Converter={StaticResource NavHighlightConverter}}"
-								Foreground="White"
-								ToolTip.Tip="{Binding Tooltip}"
-								Width="{Binding Width}"
-								Height="{Binding Height}"
-								CornerRadius="{Binding CornerRadius}"
-								Command="{Binding Command}"
-								Margin="0,0,0,4">
-							<StackPanel>
-								<TextBlock Text="{Binding Icon}"
-										   FontFamily="Segoe MDL2 Assets"
-										   FontSize="{Binding FontSize}"
-										   HorizontalAlignment="Center"/>
-							</StackPanel>
-						</Button>
-					</DataTemplate>
-				</ItemsControl.ItemTemplate>
-			</ItemsControl>
-		</StackPanel>
-	</DockPanel>
+		<ItemsControl Grid.Row="2" ItemsSource="{Binding FooterItems}" Margin="0,0,0,24" HorizontalAlignment="Center">
+			<ItemsControl.ItemsPanel>
+				<ItemsPanelTemplate>
+					<StackPanel Spacing="8"/>
+				</ItemsPanelTemplate>
+			</ItemsControl.ItemsPanel>
+			<ItemsControl.ItemTemplate>
+				<DataTemplate x:DataType="vm:NavigationMenuItemViewModel">
+					<Button Background="{Binding IsActive, Converter={StaticResource NavHighlightConverter}}"
+							Foreground="White"
+							ToolTip.Tip="{Binding Tooltip}"
+							Width="{Binding Width}"
+							Height="{Binding Height}"
+							CornerRadius="{Binding CornerRadius}"
+							Command="{Binding Command}"
+							Margin="0,0,0,4">
+						<StackPanel>
+							<TextBlock Text="{Binding Icon}"
+									   FontFamily="Segoe MDL2 Assets"
+									   FontSize="{Binding FontSize}"
+									   HorizontalAlignment="Center"/>
+						</StackPanel>
+					</Button>
+				</DataTemplate>
+			</ItemsControl.ItemTemplate>
+		</ItemsControl>
+	</Grid>
 </UserControl>
