--- a/src/Modulus.App/Views/SettingsView.axaml
+++ b/src/Modulus.App/Views/SettingsView.axaml
@@ -2,12 +2,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:vm="clr-namespace:Modulus.App.ViewModels"
+             xmlns:vm="clr-namespace:Modulus.App.ViewModels"             
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="Modulus.App.Views.MainView"
-             x:DataType="vm:MainViewModel">
-  <Design.DataContext>
-    <vm:MainViewModel />
-  </Design.DataContext>
-  <!-- This view is now a placeholder, actual content is loaded via MainWindow's CurrentView binding. -->
+             x:Class="Modulus.App.Views.SettingsView">
+  <Grid>
+    <TextBlock Text="设置页面" 
+               HorizontalAlignment="Center" 
+               VerticalAlignment="Center"
+               FontSize="24"/>
+  </Grid>
 </UserControl>
