chore: archive shell-layout change and remove AppBar theme toggle
- Archive refactor-shell-layout-components to specs/shell-layout
- Remove theme toggle button from Blazor AppBar
- Simplify MainLayout by removing theme-related code

--- a/src/Hosts/Modulus.Host.Blazor/Components/Layout/MainLayout.razor
+++ b/src/Hosts/Modulus.Host.Blazor/Components/Layout/MainLayout.razor
@@ -1,10 +1,8 @@
 ﻿@inherits LayoutComponentBase
 
-<ThemeProvider @ref="_themeProvider">
+<ThemeProvider>
     <MudLayout>
-        <AppBar IsDarkMode="@(_themeProvider?.IsDarkMode ?? false)" 
-                OnMenuToggle="@ToggleDrawer" 
-                OnThemeToggle="@ToggleTheme" />
+        <AppBar OnMenuToggle="@ToggleDrawer" />
         
         <NavDrawer @bind-IsOpen="_drawerOpen" />
         
@@ -15,16 +13,10 @@
 </ThemeProvider>
 
 @code {
-    private ThemeProvider? _themeProvider;
     private bool _drawerOpen = true;
 
     private void ToggleDrawer()
     {
         _drawerOpen = !_drawerOpen;
-    }
-
-    private void ToggleTheme()
-    {
-        _themeProvider?.ToggleTheme();
     }
 }
