--- a/src/Hosts/Modulus.Host.Avalonia/Components/NavigationView.axaml
+++ b/src/Hosts/Modulus.Host.Avalonia/Components/NavigationView.axaml
@@ -13,12 +13,46 @@
              SelectedItem="{Binding SelectedItem, RelativeSource={RelativeSource AncestorType=local:NavigationView}}">
         <ListBox.ItemTemplate>
             <DataTemplate x:DataType="ui:MenuItem">
-                <StackPanel Orientation="Horizontal" Spacing="12">
-                    <TextBlock Text="{Binding Icon}" FontSize="16" 
-                               VerticalAlignment="Center" Width="20" TextAlignment="Center"/>
-                    <TextBlock Text="{Binding DisplayName}" VerticalAlignment="Center"/>
-                </StackPanel>
+                <Panel ToolTip.Tip="{Binding DisplayName}">
+                    <!-- Expanded Mode -->
+                    <StackPanel Orientation="Horizontal" Spacing="12"
+                                IsVisible="{Binding !IsCollapsed, RelativeSource={RelativeSource AncestorType=local:NavigationView}}">
+                        <TextBlock Text="{Binding Icon}" FontSize="16" 
+                                   VerticalAlignment="Center" Width="20" TextAlignment="Center"
+                                   Opacity="{Binding IsEnabled, Converter={x:Static local:NavigationView.EnabledToOpacityConverter}}"/>
+                        <TextBlock Text="{Binding DisplayName}" VerticalAlignment="Center"
+                                   Opacity="{Binding IsEnabled, Converter={x:Static local:NavigationView.EnabledToOpacityConverter}}"/>
+                        <!-- Badge -->
+                        <Border IsVisible="{Binding BadgeCount, Converter={x:Static ObjectConverters.IsNotNull}}"
+                                Background="{DynamicResource BadgeBackgroundBrush}"
+                                CornerRadius="10" MinWidth="20" Padding="4,1">
+                            <TextBlock Text="{Binding BadgeCount}" FontSize="11" FontWeight="Bold"
+                                       Foreground="White" HorizontalAlignment="Center"/>
+                        </Border>
+                    </StackPanel>
+                    
+                    <!-- Collapsed Mode (icon only) -->
+                    <Panel IsVisible="{Binding IsCollapsed, RelativeSource={RelativeSource AncestorType=local:NavigationView}}"
+                           HorizontalAlignment="Center">
+                        <TextBlock Text="{Binding Icon}" FontSize="18" 
+                                   HorizontalAlignment="Center" VerticalAlignment="Center"
+                                   Opacity="{Binding IsEnabled, Converter={x:Static local:NavigationView.EnabledToOpacityConverter}}"/>
+                        <!-- Badge dot for collapsed mode -->
+                        <Ellipse IsVisible="{Binding BadgeCount, Converter={x:Static ObjectConverters.IsNotNull}}"
+                                 Fill="{DynamicResource BadgeBackgroundBrush}"
+                                 Width="8" Height="8"
+                                 HorizontalAlignment="Right" VerticalAlignment="Top"
+                                 Margin="0,-2,-2,0"/>
+                    </Panel>
+                </Panel>
             </DataTemplate>
         </ListBox.ItemTemplate>
+        
+        <ListBox.Styles>
+            <!-- Disabled item style -->
+            <Style Selector="ListBoxItem">
+                <Setter Property="IsHitTestVisible" Value="{Binding IsEnabled}"/>
+            </Style>
+        </ListBox.Styles>
     </ListBox>
 </UserControl>
