--- a/src/Hosts/Modulus.Host.Avalonia/Themes/DarkTheme.axaml
+++ b/src/Hosts/Modulus.Host.Avalonia/Themes/DarkTheme.axaml
@@ -36,6 +36,10 @@
     <SolidColorBrush x:Key="CardBackgroundBrush" Color="#2A2A2A"/>
     <SolidColorBrush x:Key="CardBorderBrush" Color="#3A3A3A"/>
     
+    <!-- Badge Colors -->
+    <SolidColorBrush x:Key="BadgeBackgroundBrush" Color="#F44336"/>
+    <SolidColorBrush x:Key="BadgeTextBrush" Color="#FFFFFF"/>
+    
     <!-- Acrylic Material -->
     <Color x:Key="AcrylicTintColor">#1A1A1A</Color>
     <x:Double x:Key="AcrylicTintOpacity">0.85</x:Double>
