--- a/src/Hosts/Modulus.Host.Blazor/Components/Layout/MainLayout.razor
+++ b/src/Hosts/Modulus.Host.Blazor/Components/Layout/MainLayout.razor
@@ -4,7 +4,7 @@
     <MudLayout>
         <AppBar OnMenuToggle="@ToggleDrawer" />
         
-        <NavDrawer @bind-IsOpen="_drawerOpen" />
+        <NavDrawer @bind-IsOpen="_drawerOpen" IsMini="true" />
         
         <ContentHost>
             @Body
